--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -53,6 +53,7 @@ Author:		elemis
 /*-----------------------------------------------------------------------------------*/
 /*	00. RESET
 /*-----------------------------------------------------------------------------------*/
+
 .test-img {
   display: block;
   margin: auto;
@@ -4045,7 +4046,7 @@ select {
 }
 .checklist > .table {
   border: 1px solid #ccc;
-  margin-bottom: 0px;
+  margin-bottom: 20px;
 }
 .checklist > .table > thead > tr > th,
 .checklist > .table > tbody > tr > td,
@@ -4071,8 +4072,13 @@ select {
 .set-margin-top {
   margin-top: 20px;
 }
+.set-margin-bottom {
+  margin-bottom: 20px;
+}
 .book-an-appoinment {
   margin-top: 0px;
+  margin-left: 15px;
+  margin-right: 15px;
 } 
 .forms-field > label {
   padding-top: 10px;
@@ -4081,6 +4087,8 @@ select {
 .user-message {
   font-weight: bold;
   padding-top: 15px;
+  margin-left: 15px;
+  color: red;
 }
 
 .notification-alert-hidden {
@@ -4124,14 +4132,18 @@ select {
 
 .sucess-card {
   width: 250px;
-  height: 250px;
+  height: 270px;
   text-align: center;
 }
 .success-mark {
-  top: 45%;
+  top: 40%;
   left: 33%;
   font-size: 150px; 
   vertical-align: middle;
+}
+.success-btn {
+  background-color: green;
+  margin-top: 110px;
 }
 
 
@@ -4249,4 +4261,12 @@ select {
   100% {
     box-shadow: inset 0px 0px 0px 30px #7ac142;
   }
+}
+
+.appointment-form-margin {
+  min-height: 150px;
+
+}
+.select-category {
+  padding-left: 45px;
 }
