--- a/localhost%3a3000/assets/css/style.css
+++ b/localhost%3a3000/assets/css/style.css
@@ -2668,7 +2668,7 @@ input[type='color'],
   font-weight: inherit;
   width: 100%;
   height: 38px;
-  padding: 0 15px;
+  padding: 16px;
   font-size: 14px;
   line-height: 36px;
   color: inherit;
