--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -75,7 +75,7 @@ Author:		elemis
 .carousel-wrapper {
   -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
   mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 *,
 *:before,
