--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,206 +1,34 @@
-.navbar {
-    z-index: 1008;
-    border: 0;
-    border-radius: 0;
-    min-height: inherit;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0;
-}
-.navbar.header1,
-.navbar.header3 {
-    background: #FFF
-}
-.navbar.header2 {
-    background: none
-}
-.navbar.header2 .container.boxed {
-    background: rgba(255,255,255,0.9);
-    box-shadow: 0 1px 2px -1px rgba(0, 0, 0, 0.4);
-}
-.navbar.centered {
-    background: #fff
-}
-.navbar.centered.color .navbar-collapse {
-    background: #25b7d3
-}
-.navbar.centered.extended .container {
-    display: table;
-    height: 100%;
-}
-.navbar .navbar-header {
-    display: table;
-    position: relative;
-}
-.container>.navbar-header,
-.container>.navbar-collapse {
-    margin: 0;
-    padding: 0;
-}
-.navbar-brand {
-    padding: 0;
-    line-height: 0;
-    float: none;
-    height: auto;
-    position: relative;
-    box-shadow: none;
-    margin: 0 !important;
-    vertical-align: middle;
-    display: table-cell;
-    text-align: left;
-}
-.navbar .nav-bars-wrapper {
-    display: none
-}
-.navbar .nav-bars-wrapper .nav-bars-inner {
-    pointer-events: none
-}
-.navbar .navbar-collapse {
-    border: 0;
-    box-shadow: none;
-    overflow: hidden;
-}
-.navbar .navbar-nav {
-    margin: 0 !important
-}
-.navbar .navbar-nav > li > a {
-    padding: 0;
-    font-size: 12px;
-    font-weight: 700;
-    transition: all 150ms ease-in;
-    line-height: 1;
-    color: #2e2e2e !important;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    position: relative;
-}
-.navbar .navbar-nav > li > a:focus,
-.navbar .nav > li > a:hover,
-.navbar .nav > li.current > a {
-    background: none
-}
-.navbar .nav > li.current > a,
-.navbar .nav > li > a:hover {
-    color: #25b7d3 !important
-}
-.navbar .navbar-nav > li > a:focus {
-    color: inherit
-}
-.navbar .dropdown-menu {
-    padding: 0;
-    margin: 0;
-    min-width: 150px;
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
     border: none;
-    background: none;
-    border-radius: 0;
-    box-shadow: none;
-    z-index: -1 !important;
-}
-.navbar .dropdown-menu li:first-child {
-    border: 0
-}
-.navbar .dropdown-menu li a {
-    background: none;
-    border: none;
-    color: #fff !important;
-    font-size: 12px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    padding: 0;
-    line-height: 1;
-}
-.navbar .dropdown-menu li a:hover,
-.navbar .dropdown-menu li a.active,
-.navbar .nav .open > a,
-.navbar .nav .open > a:hover,
-.navbar .nav .open > a:focus,
-.navbar .dropdown-menu > li > a:hover,
-.navbar .dropdown-menu > li > a:focus,
-.navbar .dropdown-submenu:hover > a,
-.navbar .dropdown-submenu:focus > a,
-.navbar .dropdown-menu > .active > a,
-.navbar .dropdown-menu > .active > a:hover,
-.navbar .dropdown-menu > .active > a:focus {
-    background: none
-}
-.navbar .dropdown-menu li a:hover,
-.navbar .dropdown-menu li a.active {
-    padding: 0;
-    filter: none;
-    line-height: 1;
-}
-.navbar .dropdown-menu li a:hover,
-.navbar .dropdown-menu li a.active {
-    color: #fff !important
-}
-.navbar .nav > li > .dropdown-menu:after {
-    display: none
-}
-.navbar .dropdown-menu > li > a:hover,
-.navbar .dropdown-menu > li > a:focus,
-.navbar .dropdown-submenu:hover > a,
-.navbar .dropdown-submenu:focus > a,
-.navbar .dropdown-menu > .active > a,
-.navbar .dropdown-menu > .active > a:hover,
-.navbar .dropdown-menu > .active > a:focus {
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false)
-}
-.navbar .top-bar {
-    color: #ececec
-}
-.navbar .top-bar ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-.navbar .info li {
-    display: inline;
-    padding-right: 10px;
-}
-.navbar .info.text-right li {
-    padding: 0;
-    padding-left: 10px;
-}
-.navbar .info,
-.navbar .info a,
-.navbar .info i {
-    color: #FFF
-}
-.navbar-header.dark-wrapper .info,
-.navbar-header.dark-wrapper .info a,
-.navbar-header.dark-wrapper .info i {
-    color: #4d4d4d
-}
-.navbar .info i {
-    margin-right: 2px
-}
-.navbar .info a:hover,
-.navbar .top-bar a:hover {
-    color: #25b7d3
-}
-.navbar .top-bar .container {
-    display: table
-}
-.navbar .info,
-.navbar .social-wrapper {
-    display: table-cell;
-    vertical-align: middle;
-    height: 100%;
-}
-.navbar:not(extended) .social-wrapper ul {
-    display: block;
-    margin: 15px 0;
-    text-align: right;
-}
-.navbar .social-wrapper ul li {
+  }
+  
+  .dropdown {
+    position: relative;
     display: inline-block;
-    margin: 0 0 0 16px;
-}
-.caret {
-    margin: 0;
-    top: -1px;
-    position: relative;
-}
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
