--- a/localhost%3a3000/assets/css/style.css
+++ b/localhost%3a3000/assets/css/style.css
@@ -2687,8 +2687,8 @@ input[type='color'],
   font-weight: inherit;
   width: 100%;
   height: 38px;
-  padding: 0 15px;
-  font-size: 14px;
+  padding: 5px 5px;
+  /* font-size: 43px; */
   line-height: 36px;
   color: inherit;
   border: 1px solid #ccc;
@@ -2726,7 +2726,7 @@ textarea {
   height: 100%;
   padding: 8px 13px;
   margin-bottom: 15px;
-  min-height: 200px;
+  min-height: 245px;
   resize: vertical;
   font-weight: inherit;
 }
