--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -991,15 +991,15 @@ blockquote .small {
 .navbar .dropdown-menu li a.active {
   color: #fff !important;
 }
-/* .navbar .nav > li > .dropdown-menu:after {
+.navbar .nav > li > .dropdown-menu:after {
   display: none;
-} */
-/* .navbar .nav > li > .dropdown-menu:after {
-  display: block;
-} */
-.navbar .nav > li:hover > .dropdown-menu {
-  display: block !important; 
 }
+.navbar .nav > li > .dropdown-menu:after {
+  display: block;
+}
+/* .navbar .nav > li:hover > .dropdown-menu {
+  display: block !important; 
+} */
 
 .navbar .dropdown-menu > li > a:hover,
 .navbar .dropdown-menu > li > a:focus,
@@ -3764,10 +3764,11 @@ select {
     background: #25b7d3;
     border: none;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
+    width: 200px !important;
   }
   .navbar .dropdown-menu li a {
     padding: 15px;
-    width: 200px;
+    width: 200px !important;
   }
   .navbar .dropdown-menu li a:hover,
   .navbar .dropdown-menu li a.active {
@@ -4286,4 +4287,8 @@ select {
 .icon-img {
   width: 50px;
   height: 50px;
+}
+.responsive {
+  width: 100%;
+  height: auto;
 }
