--- a/src/pages/paymentMethod/PaymentPage.css
+++ b/src/pages/paymentMethod/PaymentPage.css
@@ -24,3 +24,16 @@
   border: 1px solid #E02F2F !important;
   background-color: rgba(244,47,47,0.02);
 }
+.loader {
+  border: 7px solid #f3f3f3;
+  border-top: 7px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
